repos/makepy/contents/test/fail/Quote.rules
# Makefile-language error

all:
    print(q("xxf$$x"))
